Sat Jan 25 22:27:14 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (RLD_FLAG): Delete.
	* mkoctfile.in (RLD_FLAG): Delete.
	* octave-bug.in (RLD_FLAG): Delete.
	* Makeconf.in (RLD_FLAG): Delete.

	* Makefile.in (bin-dist): New target.

	* install-octave: Rename from doinstall.sh.  Update for 2.x.

Wed Jan 22 11:14:07 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (ld_run_path): Anchor search at beginning of line to
	avoid GNU sed bug on HP-UX systems.  Use just one sed command.

	* emacs/octave-hlp.el, emacs/octave-inf.el, emacs/octave-mod.el:
	New files from Kurt Hornik.
	* emacs/octave.el: Delete.

Mon Jan 20 11:16:21 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in (ALL_CXXFLAGS): Delete reference to -lg++.

	* configure.in (RLD_FLAG): For sparc-sun-sunos4*, remove space
	between -L and $(libdir).
	(FPICFLAG): If using g77, set it to -fPIC.

Sun Jan 19 15:57:20 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in, configure.in: Delete FUGLY.

Wed Jan  8 23:12:02 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (DEFAULT_PAGER): On cygwin32 systems, also look for
	more.com.

Tue Jan  7 00:16:35 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 2.0.1 released.

Thu Dec 19 16:18:59 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_FLIBS): Only add -Xlinker args if compiler is
	gcc.

Sat Dec 14 09:46:50 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* README.Linux: New file.
	* octMakefile.in: Distribute it.

Fri Dec 13 22:37:49 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (TERMLIBS): Look for termcap and terminfo after
	ncurses and curses.

Thu Dec 12 02:27:08 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (ALL_LDFLAGS): Add CPICFLAG here since gcc needs it
	on some systems.

	* configure.in (FPICFLAGS): Set to -fPIC if using g77 on HP/UX.

	* Makefile.in, octMakefile.in: Delete all doc-dist, local-dist,